# lumina

./: .dev.vars.example  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  README.md  constants.ts  findings.md  index.html  index.tsx  knip.json  metadata.json  package.json  pnpm-lock.yaml  progress.md  rsbuild.config.ts  tailwind.config.js  task_plan.md  tsconfig.base.json  turbo.json  types.ts  wrangler.toml
.github/workflows/: quality-gate.yml  release-desktop.yml
apps/desktop/: MIGRATION_SUMMARY.md  components.json  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: clone.rs  events.rs  fs.rs  github.rs  image.rs  metadata.rs  mod.rs  system.rs
apps/desktop/src-tauri/src/github/: client.rs  config.rs  mod.rs  types.rs  upload.rs
apps/desktop/src/components/: PhotoCard.tsx  PhotoGrid.tsx  PhotoList.tsx  Sidebar.tsx
apps/desktop/src/components/magicui/: animated-grid-pattern.tsx  blur-fade.tsx  border-beam.tsx  (+4 more)
apps/desktop/src/hooks/: useBatchPhotoActions.ts  useCloneProgress.ts  useGlobalShortcuts.ts  usePhotosCollection.ts  useUploadEventListeners.ts
apps/desktop/src/layouts/: AppShell.tsx  DetailsPanel.tsx  HeaderBar.tsx  StatusBar.tsx
apps/desktop/src/lib/: logger.ts  toast.ts
apps/desktop/src/services/: imagePrefetchService.ts  photoMapper.ts  thumbhash.ts  uploadService.ts
apps/desktop/src/stores/: appStore.ts  photosStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: commands.ts  filters.ts  layout.ts  photo.ts
apps/web/: .dev.vars.example  .env.example  README.md  components.json  index.html  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json
apps/web/functions/: _utils.ts
apps/web/functions/utils/: http.ts  share.ts
apps/web/src/app/: App.tsx  main.tsx
apps/web/src/styles/: main.css
components/: Histogram.tsx  PhotoCard.tsx  PhotoDetail.tsx  PhotoGrid.tsx  ProcessingProgress.tsx  UploadButton.tsx  UploadModal.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  progress.tsx  scroll-area.tsx  separator.tsx
crates/lumina-image/: Cargo.toml
crates/lumina-image/src/: decode.rs  exif.rs  hash.rs  lib.rs  metadata.rs  region.rs  thumbnail.rs  types.rs
docs/: README.md  code-map-desktop.md  code-map-shared.md  code-map-web.md  project-overview.md  usage.md
functions/: _utils.ts
functions/api/v1/images/: [id].ts  index.ts
functions/utils/: encoding.ts  github.ts  http.ts  image.ts  share.ts  types.ts
schemas/: image-meta.schema.json
scripts/: release-desktop.sh  sync-ffmpeg-core.mjs
services/: exifExtractor.ts  geminiService.ts  imageProcessor.ts  ocrService.ts  phashService.ts  photoMapper.ts  uploadService.ts
src/app/: App.tsx  main.tsx
src/features/photos/: types.ts
src/features/photos/components/: PhotoCard.tsx  PhotoDetail.tsx  PhotoGrid.tsx  PhotoMapView.tsx  ProcessingProgress.tsx  UploadButton.tsx  UploadModal.tsx
src/features/photos/pages/: UploadPage.tsx
src/features/photos/services/: exifExtractor.ts  geoRegionService.ts  imageProcessor.ts  mapSharePoster.ts  ocrService.ts  phashService.ts  photoMapper.ts  uploadService.ts  videoLoaderManager.ts
src/shared/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  textarea.tsx
src/styles/: main.css
styles/: main.css
(+203 files in other folders)
