[package]
name = "lumina-image"
version = "0.1.0"
edition = "2021"
description = "Shared image processing library for Lumina"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"

image = { version = "0.25", default-features = true }
webp = "0.3"
exif = { package = "kamadak-exif", version = "0.6" }
sha2 = "0.10"
thumbhash = "0.1"
infer = "0.16"
rayon = "1.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
