[package]
name = "lumina-desktop"
version = "0.1.0"
description = "Lumina Desktop - Photo Upload Management Client"
authors = ["Lumina Team"]
edition = "2021"

[lib]
name = "lumina_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

# GitHub 集成依赖
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
