[package]
name = "lumina-desktop"
version = "0.1.0"
description = "Lumina Desktop - Photo Upload Management Client"
authors = ["Lumina Team"]
edition = "2021"

[lib]
name = "lumina_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
rayon = "1.10"

lumina-image = { path = "../../../crates/lumina-image" }
